--- a/app/globals.css
+++ b/app/globals.css
@@ -40,3 +40,21 @@ body {
   @apply drop-shadow-md;
   @apply hover:bg-primary-700;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: darkslategray;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: slategray;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: lightslategray;
+}
